<resources>
    <string name="app_name">Alpha Radio</string>
    <string name="top_clicked_station">Popular Radio Stations</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="radio_stations">Radio Stations</string>
    <string name="favorites_screen_title">Favorites</string>
    <string name="near_you">Near you</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="country">Country</string>
    <string name="search_station_hint">Search Stations</string>
    <string name="now_playing">Now Playing</string>
    <string name="channel_name">Channel 1</string>
    <string name="channel_description">Channel description ...</string>
    <string name="search_fav_hint">Search favorite station</string>
    <string name="search_advance_hint">What would you like to listen?</string>
    <string name="empty_fav_list_message">Favorite List Empty</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="five_mins">5 minutes</string>
    <string name="_10_minutes">10 minutes</string>
    <string name="_15_minutes">15 minutes</string>
    <string name="_30_minutes">30 minutes</string>
    <string name="_45_minutes">45 minutes</string>
    <string name="_1_hour">1 hour</string>
    <string name="turn_off_timer">Turn off timer</string>
    <string name="message_item_not_find">Oops! We can\'t find your station</string>
</resources>