<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="600dp"
    android:background="@color/black">

    <TextView
        android:id="@+id/txt_timer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_64"
        android:text="@string/sleep_timer"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_24"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_5mins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_5mins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_64"
        android:text="@string/five_mins"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_10mins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_timer_title"
        tools:layout_editor_absoluteX="37dp" />

    <TextView
        android:id="@+id/tv_10mins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10_minutes"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_15mins"
        app:layout_constraintStart_toStartOf="@+id/tv_5mins"
        app:layout_constraintTop_toBottomOf="@+id/tv_5mins"
        tools:layout_editor_absoluteX="37dp" />

    <TextView
        android:id="@+id/tv_15mins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_15_minutes"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_30mins"
        app:layout_constraintStart_toStartOf="@+id/tv_5mins"
        app:layout_constraintTop_toBottomOf="@+id/tv_10mins"
        tools:layout_editor_absoluteX="38dp" />

    <TextView
        android:id="@+id/tv_30mins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_30_minutes"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_45mins"
        app:layout_constraintStart_toStartOf="@+id/tv_5mins"
        app:layout_constraintTop_toBottomOf="@+id/tv_15mins"
        tools:layout_editor_absoluteX="38dp" />

    <TextView
        android:id="@+id/tv_45mins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_45_minutes"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_1hour"
        app:layout_constraintStart_toStartOf="@+id/tv_5mins"
        app:layout_constraintTop_toBottomOf="@+id/tv_30mins"
        tools:layout_editor_absoluteX="35dp" />

    <TextView
        android:id="@+id/tv_1hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1_hour"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_turn_off_timer"
        app:layout_constraintStart_toStartOf="@+id/tv_5mins"
        app:layout_constraintTop_toBottomOf="@+id/tv_45mins"
        tools:layout_editor_absoluteX="37dp" />

    <TextView
        android:id="@+id/tv_turn_off_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dimen_128"
        android:text="@string/turn_off_timer"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_5mins"
        app:layout_constraintTop_toBottomOf="@+id/tv_1hour"
        tools:layout_editor_absoluteX="35dp" />

</androidx.constraintlayout.widget.ConstraintLayout>