<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".ui.fragment.FavoriteFragment">

    <LinearLayout
        android:id="@+id/linear_favorite_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/favorites_screen_title"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_24" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view_fav_station"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:background="@drawable/drawable_search_view"
            app:defaultQueryHint="@string/search_fav_hint"
            app:iconifiedByDefault="false" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_favorite"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@drawable/background_layout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_favorite_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_32"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toTopOf="@+id/constraint_favorite" />

        <TextView
            android:id="@+id/text_fav_list_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_64"
            android:text="@string/empty_fav_list_message"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/constraint_favorite"
            app:layout_constraintStart_toStartOf="@+id/constraint_favorite"
            app:layout_constraintTop_toTopOf="@+id/constraint_favorite" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>