<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".ui.fragment.SearchFragment">

    <LinearLayout
        android:id="@+id/linear_search_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/search"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_24" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view_advance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:background="@drawable/drawable_search_view"
            app:defaultQueryHint="@string/search_advance_hint"
            app:iconifiedByDefault="false" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@drawable/background_layout">

        <ProgressBar
            android:id="@+id/progress_bar_search_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/constraint_search"
            app:layout_constraintStart_toStartOf="@+id/constraint_search"
            app:layout_constraintTop_toTopOf="@+id/constraint_search" />

        <TextView
            android:id="@+id/tv_message_item_not_find"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_64"
            android:text="@string/message_item_not_find"
            android:textAlignment="center"
            android:textSize="@dimen/text_16"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@+id/constraint_search" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_result_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_32"
            android:clipToPadding="false"
            android:paddingBottom="160dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toTopOf="@+id/constraint_search" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>